--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -17,7 +17,6 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
-	
 	padding: 0;
 	border: 0;
 	font-size: 100%;
@@ -64,95 +63,176 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
-
 .container {
-	width: 900px;
-	margin: auto;
-	
-	height: 1200px
-}
-header nav{
-	display:inline-block;
-	margin-top: 30px;
-	margin-bottom: 60px;
+    width: 880px;
+    margin: auto;
 }
 
-header nav a{
-	margin: 0 24px;
-	text-decoration: none;
-	color:#a6a6a6;
-}
-a:hover{
-	background: gray;
-}
-a:active {
-	color: #0000FF;
+/* Header Styles */
+
+header {
+    width: 100%;
+    display: flex;
 }
 
-p{
-	font-size: 11px;
-}
-.logo{
-	margin-left: 38px;
-	margin-top: 21px;
-	margin-bottom: -12px;
-}
-.demand{
-	margin-top: 20px;
-	vertical-align: top;
-}
-.text{
-	font-size: 80px;
-	display: inline-block;
-	text-align: center;
-	margin-left: 73px;
-    margin-right: 75px;
-    vertical-align: top;
-    margin-top: 43px;
-	
-}
-button {
-	border: 2px solid black;
-	background: white;
-    border: 2px solid black;
-    vertical-align: top;
-    padding: 4px 38px;
-    font-size: 18px;
-}
-.demand img{
-	margin-bottom: 120px;
+header nav {
+    margin-top: 40px; 
+    width: 610px;
+    justify-content: space-between;
+    display: flex;
 }
 
-.top-content{
-	display:inline-block;
-	column-count:2;
-	border-top: 2px solid black;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	
-}
-.text-content{
-	margin:10px;
-	margin-left: 0px;
-}
-.bottom-content{
-	display:inline-block;
-	column-count: 3;
-	border-bottom: 2px solid black;
-	padding-bottom: 30px;
-	padding-top: 30px;
-}
-.contact h4{
-	margin-top: 25px;
-}
-.contact p{
-	margin-bottom: 12px;
-}
-footer{
-	text-align: center;
-	margin-bottom: 100px;
-    margin-top: 30px;
+header nav a {
+    text-decoration: none;
+    color: #b0b0b0;
 }
 
-sd
+header nav a:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+header .logo {
+    margin: 28px 0 0 91px;
+}
+
+/* Call To Action (CTA) Styles */
+
+.cta {
+    display: flex;
+    margin-top: 72px;
+    justify-content: flex-end;
+}
+
+.cta .cta-text {
+    font-size: 72px;
+    text-align: center;
+    letter-spacing: 5px;
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    align-items: center;
+    margin: 0 82px 0 0;
+}
+
+.cta .cta-text button {
+    border: 1px double black;
+    font-size: 16px;
+    background: white;
+    width: 170px;
+    height: 32px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.cta .cta-text button:hover {
+    background: black;
+    color: white;
+}
+
+/* Main Content Styles */
+
+.main-content {
+   border-top: 2px solid black; 
+   border-bottom: 2px solid black;
+   margin: 75px 0 35px 0;
+   padding: 35px 0;
+   font-size: 16px;
+   line-height: 18px;
+}
+
+.main-content .top-content {
+    display: flex;
+}
+
+.main-content .middle-img {
+    display: block;
+    margin: 30px auto;
+}
+
+.main-content .bottom-content {
+    display: flex;
+}
+
+.main-content .bottom-content p {
+    padding-right: 20px;
+}
+
+/* Contact Styles */
+
+.contact p {
+    margin: 15px 0;
+}
+
+/* Footer Styles */
+
+footer {
+    text-align: center;
+    margin: 40px 0 20px;
+}
+/*Services Styles*/
+
+.services-content {
+	display:flex;
+	flex-wrap:wrap;
+	justify-content: space-between;
+	line-height: 1.3;
+}
+
+.services-content .services-header-img{
+	margin: 20px 0;
+}
+.services-content h1 {
+	font-size: 26px;
+	margin: 10px 0;
+}
+.services-content .services-text{
+	border-bottom: 1px solid black;
+	padding-bottom: 40px;
+	margin-bottom: 20px;
+}
+.services-content .card{
+	padding: 20px;
+	border: 1px solid black;
+	width: 420px;
+	background: whitesmoke;
+	margin: 20px 0;
+}
+.services-content .card button{
+	padding: 10px 40px;
+    margin-top: 20px;
+    cursor: pointer;
+    background: white;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+.services-content .card	button:hover{
+	background: black;
+	color:white;
+
+}
+.services-content .services-info {
+    display: flex;
+    flex-wrap: wrap;
+    border-top: 2px solid black; 
+    margin: 20px 0 35px 0;
+    padding-top: 40px; 
+}
+.services-content .services-info .facts {
+	width: 400px;
+	margin: 0 60px 20px 0;
+}
+.services-content .services-info .facts p {
+	margin-bottom: 20px;
+}
+.services-content .services-info ul{
+	margin:20px;
+}
+.services-content .services-info ul li{
+	list-style-type: square;
+	padding: 5px;
+}
+.services-content .services-info .services-info-img {
+	width:420px;
+	height: 300px;
+}
